Refactor environment configuration and add Nginx setup for API proxying

--- a/.env.api
+++ b/.env.api
@@ -6,13 +6,14 @@ DB_NAME=${DB_NAME}
 
 DATABASE_URL=mysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
+REDIS_PORT=${REDIS_PORT}
 REDIS_URL=redis://redis:${REDIS_PORT}
 
 JWT_SECRET=${JWT_SECRET}
+JWT_ALGORITHM=${JWT_ALGORITHM}
 
-NODE_ENV=${NODE_ENV}
-PORT=${PORT}
-APP_URL=${APP_URL}
+
+APP_URL=${BACKEND_URL}
 FRONTEND_URL=${FRONTEND_URL}
 
 RUN_SEED=${RUN_SEED}
