--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,37 @@
-# ========================
-# DATABASE (MySQL)
-# ========================
+# Database
+DB_HOST=localhost
+DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=senha123
 DB_NAME=doecerto
-DB_PORT=3306
 
-# ========================
-# JWT
-# ========================
-JWT_SECRET=sua-chave-secreta-aleatoria-muito-segura-aqui
+# JWT Secret
+JWT_SECRET=sua-chave-secreta-aqui
 
-# ========================
-# REDIS
-# ========================
+# Redis
 REDIS_PORT=6379
 
-# ========================
-# APLICAÇÃO
-# ========================
-NODE_ENV=production
-PORT=3000
-
-# ========================
-# URLS
-# ========================
-APP_URL=https://api.doecerto.com
+# Backend URL
+BACKEND_URL=https://api.doecerto.com
+# Frontend URL
 FRONTEND_URL=https://doecerto.com
 
-# ========================
-# EMAIL / SMTP (se usar)
-# ========================
-# EMAIL_HOST=smtp.gmail.com
-# EMAIL_PORT=587
-# EMAIL_USER=seu-email@gmail.com
-# EMAIL_PASS=sua-app-password-aqui
-# EMAIL_FROM=noreply@doecerto.com
+# Email/SMTP
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=seu-email@gmail.com
+EMAIL_PASS=sua-app-password-aqui
+EMAIL_FROM=noreply@doecerto.com
 
-# ========================
-# DEV / BOOT
-# ========================
-RUN_SEED=true
+# JWT expiração (opcional)
+JWT_EXPIRES_IN=1h
+
+# Algoritmo do token JWT (ex: HS256)
+JWT_ALGORITHM=HS256
+
+# ========================================
+# 🧪 APENAS DESENVOLVIMENTO
+# ========================================
+
+# Executar seed no startup do Docker (NUNCA true em produção!)
+# RUN_SEED=false
