--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       timeout: 5s
       retries: 20
       start_period: 60s
+
   redis:
     image: redis:7
     restart: always
@@ -25,6 +26,7 @@ services:
       - backend
     volumes:
       - redis_data:/data
+
   api:
     image: guilhermemth/doecerto-api:latest
     restart: always
@@ -46,6 +48,23 @@ services:
       - uploads_profiles:/app/uploads/profiles
       - uploads_payments:/app/uploads/payment-proofs
       - api_logs:/app/logs
+
+  frontend:
+    image: guilhermemth/doecerto-frontend:latest
+    restart: always
+    depends_on:
+      - api
+    networks:
+      - backend
+      - frontend
+    ports:
+      - "80:80"
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
+    volumes:
+      # Monta o nginx.conf customizado
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+
   watchtower:
     image: containrrr/watchtower:latest
     restart: always
@@ -60,6 +79,7 @@ services:
       
 networks:
   backend:
+  frontend:
 
 volumes:
   mysql_data:
