--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name doecerto.ddns.net;
     root /usr/share/nginx/html;
     index index.html;
 
