--- a/nginx.conf
+++ b/nginx.conf
@@ -15,11 +15,27 @@ server {
     # Proxy reverso para a API
     # Todas as requisições para /api/* serão redirecionadas para o container da API
     location /api/ {
+        # Responder a preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' $http_origin always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Max-Age' '86400' always;
+            return 204;
+        }
+
         # Remove o prefixo /api antes de enviar para o backend
         rewrite ^/api/(.*)$ /$1 break;
         
         # Proxy para o container da API (usa o nome do serviço do docker-compose)
         proxy_pass http://api:3000;
+        
+        # Remover headers CORS da API backend para evitar duplicação
+        proxy_hide_header 'Access-Control-Allow-Origin';
+        proxy_hide_header 'Access-Control-Allow-Methods';
+        proxy_hide_header 'Access-Control-Allow-Headers';
+        proxy_hide_header 'Access-Control-Allow-Credentials';
         
         # Headers necessários para o proxy funcionar corretamente
         proxy_http_version 1.1;
@@ -30,6 +46,12 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Adicionar CORS nas respostas do proxy
+        add_header 'Access-Control-Allow-Origin' $http_origin always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
         
         # Timeouts para requisições longas
         proxy_connect_timeout 60s;
