--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,20 +50,38 @@ services:
       - api_logs:/app/logs
 
   frontend:
-    image: guilhermemth/doecerto-frontend:latest
+    image: guilhermemth/doecerto-frontend:sistemas-distribuidos
     restart: always
     depends_on:
+      - api
+    networks:
+      - backend
+    labels:
+      - com.centurylinklabs.watchtower.enable=true
+
+  nginx:
+    image: nginx:alpine
+    restart: always
+    depends_on:
+      - frontend
       - api
     networks:
       - backend
       - frontend
     ports:
       - "80:80"
-    labels:
-      - com.centurylinklabs.watchtower.enable=true
+      - "443:443"
     volumes:
-      # Monta o nginx.conf customizado
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      - certbot_etc:/etc/letsencrypt:ro
+      - certbot_www:/var/www/certbot:ro
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - certbot_etc:/etc/letsencrypt
+      - certbot_www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
   watchtower:
     image: containrrr/watchtower:latest
@@ -87,3 +105,5 @@ volumes:
   uploads_profiles:
   uploads_payments:
   api_logs:
+  certbot_etc:
+  certbot_www:
