--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,25 @@
 server {
     listen 80;
-    server_name doecerto.ddns.net;
-    root /usr/share/nginx/html;
-    index index.html;
+    server_name doecerto.ddns.net localhost;
 
     absolute_redirect off;
+    
+    # Permite que o Certbot valide o domínio
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
 
-    # Configuração para SPA (Single Page Application)
-    # Redireciona todas as rotas não encontradas para index.html
+    # Proxy reverso para o frontend Next.js
     location / {
-        try_files $uri /index.html;
+        proxy_pass http://frontend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Proxy reverso para a API
@@ -59,24 +69,6 @@ server {
         proxy_read_timeout 60s;
     }
 
-    # Cache agressivo para assets estáticos (imagens, fonts, etc)
-    location ~* \.(jpg|jpeg|png|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Cache para CSS e JavaScript
-    location ~* \.(css|js)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Não fazer cache do HTML
-    location ~* \.html$ {
-        expires -1;
-        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
-    }
-
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
@@ -90,11 +82,4 @@ server {
     gzip_types text/plain text/css text/xml text/javascript 
                application/x-javascript application/xml+rss 
                application/json application/javascript;
-
-    # Desabilita logs de acesso para assets (opcional)
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
-        access_log off;
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
 }
