--- a/nginx.conf
+++ b/nginx.conf
@@ -1,85 +1,13 @@
 server {
     listen 80;
-    server_name doecerto.ddns.net localhost;
-
-    absolute_redirect off;
+    server_name doecerto.ddns.net;
     
-    # Permite que o Certbot valide o domínio
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
-
-    # Proxy reverso para o frontend Next.js
+    
     location / {
-        proxy_pass http://frontend:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+        return 200 'Aguardando certificado SSL...';
+        add_header Content-Type text/plain;
     }
-
-    # Proxy reverso para a API
-    # Todas as requisições para /api/* serão redirecionadas para o container da API
-    location /api/ {
-        # Responder a preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' $http_origin always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Max-Age' '86400' always;
-            return 204;
-        }
-
-        # Remove o prefixo /api antes de enviar para o backend
-        rewrite ^/api/(.*)$ /$1 break;
-        
-        # Proxy para o container da API (usa o nome do serviço do docker-compose)
-        proxy_pass http://api:3000;
-        
-        # Remover headers CORS da API backend para evitar duplicação
-        proxy_hide_header 'Access-Control-Allow-Origin';
-        proxy_hide_header 'Access-Control-Allow-Methods';
-        proxy_hide_header 'Access-Control-Allow-Headers';
-        proxy_hide_header 'Access-Control-Allow-Credentials';
-        
-        # Headers necessários para o proxy funcionar corretamente
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
-        
-        # Adicionar CORS nas respostas do proxy
-        add_header 'Access-Control-Allow-Origin' $http_origin always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        
-        # Timeouts para requisições longas
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
-    }
-
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-
-    # Compressão Gzip
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript 
-               application/x-javascript application/xml+rss 
-               application/json application/javascript;
 }
