--- a/nginx.conf
+++ b/nginx.conf
@@ -1,13 +1,27 @@
 server {
     listen 80;
     server_name doecerto.ddns.net;
-    
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-    
+
+    # Frontend
     location / {
-        return 200 'Aguardando certificado SSL...';
-        add_header Content-Type text/plain;
+        proxy_pass http://frontend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # API
+    location /api/ {
+        proxy_pass http://api:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
